<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BetUActivity!</string>
    <string name="app_name">DropaBet</string>
    <string name="bet_you_that">Betcha ...</string>
    <string name="bet_subject_hint">Describe bet topic ...</string>
    <string name="bet_you_on">Reward ...</string>
    <string name="bet_you_on_hint">Describe the reward ...</string>
    <string name="bet_due_time">Due on ...</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="submit">Submit</string>
    <string name="select_time">Select time</string>
    <string name="who_is_betting">Who is betting</string>
    <string name="select_friends">Add friends</string>
    <string name="open_bet">Invite to bet</string>
    <string name="close_bet">Close\n bet</string>
    <string name="my_bet">My bet ...</string>
    <string name="my_bet_hint">Enter your bet ...</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="pending">Pending</string>
	<string name="set_bet_result">What was the bet result?</string>
	<string name="publish_results">Publish results</string>
	<string name="publishing_bet">Publishing bet...</string>
	<string name="please_wait">Please wait</string>
	<string name="send">Send</string>
	<string name="betting_on">Betting on </string>
	<string name="and">And</string>
	<string name="others">others</string>
	<string name="invited">Invited</string>
	<string name="won">Won a</string>
	<string name="no_one_won">No one won a </string>

	<string name="create_subject_hint">What do you want to bet about?</string>
	<string name="create_stake_hint">What\'s the stake?</string>
	<string name="create_duedate_hint">Close</string>
	<string name="create_prediction_hint">What\'s your bet?</string>
	<string name="create_prediction_label">Enter your prediction, or pick one of these:</string>
		
	<string name="stake_beer">Drink</string>
	<string name="stake_meal">Lunch</string>
	<string name="stake_movie">Movie</string>
	<string name="stake_twist">Twist</string>
	<string name="stake_groupon">Groupon</string>
	<string name="stake_coins">Conins</string>
			
	<string name="email_address">Email address</string>
	<string name="email_address_hint">user@domain.com</string>
	<string name="register">Register</string>
	<string name="login">Login</string>
	<string name="update">Update</string>
	<string name="skip">Skip</string>
	<string name="reset">Rest Password</string>
	<string name="name">Nick name</string>
	<string name="name_hint">user</string>
	<string name="password">Password</string>
	<string name="password_hint">password</string>
	<string name="fb_Connect">Login with <b>Facebook</b></string>
	<string name="email_Connect">Login with <b>Email Address</b></string>
	
	<string name="settings">Settings</string>
	<string name="refresh">Refresh</string>
	<string name="profile">Profile</string>
	<string name="log_out">Log Out</string>
	
	<string name="invite">Invite</string>
	<string name="close">Close</string>
	<string name="delete">Delete</string>
	<string name="done">Done</string>
	
	<string name="all_bets">All bets</string>
	<string name="bets_feed">Activity</string>
	<string name="new_bets">New bets</string>
	<string name="my_bets">My bets</string>
	
	<string name="more_info">MORE INFO</string>
	<string name="badges">BADGES</string>
	<string name="coins">COINS</string>
	<string name="friends">FRIENDS</string>
	<string name="loading">loading</string>
	<string name="no_badges">No Badges yet</string>
	
	<!-- messages -->
	<string name="msg_bet_accepted">Bet accepted</string>
	<string name="msg_bet_rejected">Bet rejected</string>
	<string name="msg_bet_loading">Loading bet ...</string>
	<string name="error_registration_succeeded">Registration succeeded</string>
			
	<!-- error messages -->
	<string name="error_missing_bet_subject">Missing bet subject</string>
	<string name="error_missing_bet">Missing bet</string>
	<string name="error_missing_bet_reward">Missing bet reward</string>
	<string name="error_missing_bet_prediction">Missing bet prediction</string>
	<string name="error_bad_date_format">Bad date format</string>
	<string name="error_bad_time_format">Bad time format</string>
	<string name="error_bad_email">Bad email address</string>
	<string name="error_please_register">You need to register before placing bets</string>
	<string name="error_bet_not_found">No bet found</string>
	<string name="error_registration_failed">Registration failed</string>
	<string name="error_registration_existing_user_failed">User exist, password reset email sent</string>
	<string name="error_pass_short">Password to short</string>
	<string name="error_failed_publishing_bet">Failed creatign bet</string>
	<string name="error_connectivity_error">Connectivity error</string>
	<string name="error_authorization_error">Authorization error</string>
	<string name="error_server_error">Server error</string>
	<string name="error_internal_error">Internal error</string>
	<string name="error_facebook_error">facebook error</string>
	
	<!-- activities -->
    <string name="bettabactivity">bettabactivity</string>
	<string name="createbet">createbet</string>
    <string name="betsrecordsgroup">betsrecordsgroup</string>
    <string name="betsrecords">betsrecords</string>
    <string name="betdetails">betdetails</string>
    <string name="settingsactivity">settings</string>
    <string name="betcategoryactivity">categories</string>
    <string name="profileactivity">profile</string>
    
    <!-- file names -->
    <string name="prefs_name">betcha_prefs_name</string>
    
</resources>