<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ProfileDetailsContent"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- row 0 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp" >
        
	    <ImageView
		    android:id="@+id/iv_profile_pic"
		    android:layout_width="90dp"
		    android:layout_height="90dp"
		    android:layout_alignParentTop="true"
		    android:layout_alignParentLeft="true"
		    android:layout_margin="8dp"
		    android:src="@drawable/default_avatar"
		    android:scaleType="centerCrop" />

	    <ImageView
	        android:id="@+id/iv_profile_frame"
	        android:layout_width="98dp"
	        android:layout_height="98dp"
		    android:layout_alignParentTop="true"
		    android:layout_alignParentLeft="true"
		    android:layout_margin="4dp" 
		    android:src="@drawable/bet_avatar_frame" />

	    <TextView
	        android:id="@+id/tv_profile_last_name"
	        style="@style/Text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/tv_profile_first_name"
	        android:layout_below="@+id/tv_profile_first_name"
	        android:padding="6dp"
	        android:text="last name"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
		
	    <TextView
	        android:id="@+id/tv_profile_status"
	        style="@style/Text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/iv_profile_frame"
	        android:layout_alignLeft="@+id/tv_profile_last_name"
	        android:layout_centerHorizontal="true"
	        android:padding="6dp"
	        android:text="status"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/tv_profile_first_name"
	        style="@style/Text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/iv_profile_frame"
	        android:layout_toRightOf="@+id/iv_profile_pic"
	        android:padding="6dp"
	        android:text="first name"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffd2d2d2" />
	
	<!-- row 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
	    android:orientation="horizontal" >
		
		<!-- row 1  col 0-->
        <LinearLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"  >
            <TextView
		        style="@style/Text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:padding="6dp"
		        android:text="@string/badges"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

           
				<LinearLayout
				android:id="@+id/profile_badges_container"
				android:layout_gravity="center_horizontal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"  >
	            	<TextView
				        style="@style/Text"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center_horizontal"
				        android:padding="6dp"
				        android:text="@string/no_badges"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
				</LinearLayout>
				
        </LinearLayout>
		<View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#ffd2d2d2" />
        
        <!-- row 1  col 1-->
        <LinearLayout
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"  >
            <TextView
		        style="@style/Text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:padding="6dp"
		        android:text="@string/coins"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
				android:orientation="horizontal" >
                <TextView
                    android:id="@+id/tv_profile_coins"
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:padding="6dp"
                    android:text="@string/loading"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="22dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/coins" />

            </LinearLayout>
        </LinearLayout>
	    
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffd2d2d2" />
 	
 	<!-- row 2 -->
    <TextView
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp"
        android:text="@string/more_info"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
